--- a/gb/17/2/10/n8793965.md
+++ b/gb/17/2/10/n8793965.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：共产党“五大导师”之毛泽东（四）</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年02月10日讯】通过一个个运动不间断的杀人和迫害中国人，输出革命参与屠杀他国百姓，镇压宗教，毁坏中国灿烂悠久的文化，大搞崇拜……这样的<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>已经是十恶不赦了，然而，其所做的坏事还远不止这些。</p>
+	<p>【大纪元2017年02月10日讯】通过一个个运动不间断的杀人和迫害中国人，输出革命参与屠杀他国百姓，镇压宗教，毁坏中国灿烂悠久的文化，大搞崇拜……这样的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>已经是十恶不赦了，然而，其所做的坏事还远不止这些。</p>
 <p><strong>出卖中国领土和权益</strong></p>
 <p>“卖国卖民”是共产党与生俱来的禀性，“卖国求权”也是其党一贯的方针路线。从中共作为苏俄亚洲支部成立之初，到抗战期间勾结日寇对付国军，到与苏联签订《哈尔滨协定》和《莫斯科协定》出卖东北资源换取苏共支持内战夺取政权，中共从一开始就是一个不折不扣的卖国政党。1949年建政之后，从毛到江更是连续出卖了数百万平方公里的国土。</p>
-<p>建政初期，<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>和中共担心美国协助退守台湾的国民政府反攻大陆，遂赶赴苏联，与其签订了《中苏同盟条约》以及两个秘密协定。</p>
+<p>建政初期，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>和中共担心美国协助退守台湾的国民政府反攻大陆，遂赶赴苏联，与其签订了《中苏同盟条约》以及两个秘密协定。</p>
 <p>在秘密协定中，正式承认蒙古独立，让苏联保持在中国东北的特权，战时允许苏军在华据守，中国海空军基地交给苏俄，东北各港口交苏军使用；中苏以货易货，中国土产，特别是粮食，应尽量输俄；苏联在中国享有特别贸易权、铁路管理权；控制矿权；在中国一些地区，苏联人有自由居住权；应征一千万劳工给苏联，压缩一亿“多余的人口”等等。</p>
 <p>秘密协定明显损害了中国的国家主权和利益。1989年，邓小平对来访的时任苏联总书记戈巴契夫说：“从鸦片战争起，列强侵略、欺负、奴役中国，对中国造成损害最大的是日本，最后实际上从中国得利最多的是沙俄，包括苏联一定时期、一定问题在内。”邓小平所言大概就包括这个条约和秘密协定。</p>
 <p>不仅如此，毛还随意将中国的国土送给周边越南、缅甸、朝鲜、印度等国家。如在越南内战中，为了给越南内的防空增加预警时间，毛1957年同意把居住着2,000名中国人、属于海南岛的白龙尾岛“交给越南北方使用”。时至今日，越南都没有归还白龙尾岛。</p>
@@ -22,7 +22,7 @@
 <p>此外，根据海外英文网站的表述，在1972年9月27日晚与日本首相田中角荣会见时，毛亦再次感谢日本侵华。</p>
 <p>一场蒋介石和国民政府率领中国人民抵抗日本、保家卫国的可歌可泣的战争，在毛的眼里，却成了另外的样子，侵略的日军成了中共的大恩人，也因此，中共政府放弃了战争赔款的要求，这样的毛和中共是何等的不堪？！而日本至今不向中国人民道歉，不愿意赔偿中国人，与毛和中共的态度有一定关联。</p>
 <p><strong>朝鲜战争50万中国人异国埋骨</strong></p>
-<p>迄今很多中国人不知道的是，中共一直宣传的“<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%8A%97%E7%BE%8E%E6%8F%B4%E6%9C%9D.md#1">抗美援朝</a>”实则是一场帮助侵略者朝鲜的战争，中共是侵略者的帮凶。</p>
+<p>迄今很多中国人不知道的是，中共一直宣传的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8A%97%E7%BE%8E%E6%8F%B4%E6%9C%9D.md#1">抗美援朝</a>”实则是一场帮助侵略者朝鲜的战争，中共是侵略者的帮凶。</p>
 <p>2015年大陆澎湃新闻网刊登了苏联解密档“斯大林毛泽东如何商定中国出兵援朝”，档显示，1950年6月25日朝鲜战争爆发，起初朝鲜军队进展顺利，到8月中旬就将韩国军队驱至釜山，并占领了韩国90%的土地。随后，以美国为首的联合国军于9月15日在仁川登陆，在美国空军的不断轰炸下，朝鲜军队开始招架不住，焦虑不安的金日成于是考虑请中国出兵援助朝鲜。在中、苏、朝三方的反复沟通下，毛下令中共军队于10月19日跨过鸭绿江参加朝鲜战争。</p>
 <p>而对于中共帮助朝鲜之举，国际社会的反应是：1951年1月30日，联合国大会第一委员会以四十四票赞成、七票弃权的表决结果通过了谴责中国为侵略者的提案。当年5月18日，联合国还通过了提案，要求成员国对中国实行禁运。</p>
 <p>这场战争使至少50万中国人葬身异国他乡，侥幸活下来回到中国大陆的不少人，在以后的运动中则不断被折腾而晚景凄凉，而在中共帮助下的朝鲜金氏政权，今日仍在奴役着几千万朝鲜人民。毛的罪孽怎样说得清？</p>
@@ -39,11 +39,11 @@
 <p>这就是号称“为人民服务”的毛和中共带给中国和中国人的所谓“幸福生活”——一场切切实实的灾难。</p>
 <p>更让人费解的是，中共在自己国民困顿重重之时，却大把撒钱“援助”外国。1961年大饥荒期间，仅仅因为阿尔巴尼亚支持毛反赫鲁雪夫，在中国人成千上万被饿死的当口，就给仅有160万人口的阿国200亿元粮食和物资，此外，还给了越南200亿元“援助”。这就是口口声声“为人民谋幸福”的毛和中共的真实面目。</p>
 <p><strong>糜烂私生活</strong></p>
-<p>与马恩斯列“四大导师”一样，毛的私生活同样放荡、糜烂。毛走出韶山冲后的第一位恋人是陶斯咏小姐，后与其老师的女儿<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%9D%A8%E5%BC%80%E6%85%A7.md#1">杨开慧</a>结婚，生有三子。</p>
-<p>毛逃到井冈山后，本可以在安顿下来后就将妻儿接来团聚的毛，却始终未与<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%9D%A8%E5%BC%80%E6%85%A7.md#1">杨开慧</a>见面，反而与更年轻的女子<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E8%B4%BA%E5%AD%90%E7%8F%8D.md#1">贺子珍</a>同居起来，并在未离婚的情况下，在1928年与其结婚，还生下了第一个女儿。而当时，杨开慧带着3个孩子住在离长沙东乡60里的板仓，生活十分穷困，生命危在旦夕，毛两次打长沙都经过此处，也没有进去看看他们，甚至都没有去营救因其被处死的杨开慧。</p>
+<p>与马恩斯列“四大导师”一样，毛的私生活同样放荡、糜烂。毛走出韶山冲后的第一位恋人是陶斯咏小姐，后与其老师的女儿<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E5%BC%80%E6%85%A7.md#1">杨开慧</a>结婚，生有三子。</p>
+<p>毛逃到井冈山后，本可以在安顿下来后就将妻儿接来团聚的毛，却始终未与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9D%A8%E5%BC%80%E6%85%A7.md#1">杨开慧</a>见面，反而与更年轻的女子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%BA%E5%AD%90%E7%8F%8D.md#1">贺子珍</a>同居起来，并在未离婚的情况下，在1928年与其结婚，还生下了第一个女儿。而当时，杨开慧带着3个孩子住在离长沙东乡60里的板仓，生活十分穷困，生命危在旦夕，毛两次打长沙都经过此处，也没有进去看看他们，甚至都没有去营救因其被处死的杨开慧。</p>
 <p>据网上流传的作者为淳于雁写的文章披露，1982年湖南省政府指令有关部门，维修杨开慧的祖传老宅作为文物保护时，在修补的砖墙缝里，意外发现了用蜡纸包好封存的杨开慧写给毛的7封情书手稿。1990年当局再次修缮杨宅时，又从她的卧室外檐头下，发现藏着同样以蜡纸密封的她在被捕前所写的最后一份手稿。</p>
 <p>这些文稿字里行间充满了杨对毛从痴情热恋转化为极度怨恨的“血和泪”，如她在最后的一封信里，指责毛是“生活流氓，政治流氓”，并写道：“即使他死了，我的眼泪也要缠住他的尸体。他丢弃我了，一幕一幕地，他一定是丢弃我了。”这证实了先前的极端自私的毛冷酷无情背弃妻子杨开慧的传闻。</p>
-<p>让杨开慧如此愤怒的一个原因是毛与<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E8%B4%BA%E5%AD%90%E7%8F%8D.md#1">贺子珍</a>的再婚。此事被上井冈山探望毛的杨开慧的哥哥杨开智亲眼所见，并在随后告知了妹妹。而毛的前秘书李锐还曾透露，杨开慧愤怒的另一个原因是她发现毛强奸了她的堂妹。</p>
+<p>让杨开慧如此愤怒的一个原因是毛与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%BA%E5%AD%90%E7%8F%8D.md#1">贺子珍</a>的再婚。此事被上井冈山探望毛的杨开慧的哥哥杨开智亲眼所见，并在随后告知了妹妹。而毛的前秘书李锐还曾透露，杨开慧愤怒的另一个原因是她发现毛强奸了她的堂妹。</p>
 <p>中共建政后，毛曾写了一首诗，其中有一句是“我失骄杨君失柳”，中共解读这是毛对杨开慧的思念之情，但从毛极端自私的个性看，这不过又是在作秀。</p>
 <p>毛对杨开慧无情，对贺子珍也是如此。1934年在逃跑过程中，毛只顾自己生理发泄，对贺子珍逃跑途中的难处、痛苦根本不管不顾，一年期间竟然使贺子珍三次怀孕，弄的瘦弱多病，人老株黄。</p>
 <p>到达陕北后，毛又弃贺子珍不顾，与北京来的女学生、身边的英语翻译吴广慧勾搭成奸，奸情被贺子珍撞破，毛却不找自己的错误，反而让贺子珍去了苏联。贺子珍在莫斯科生下的儿子因病死亡后，她要求回延安，却遭到毛的拒绝，毛将三岁的女儿娇娇送到贺的身边。毛的冷漠导致贺子珍在莫斯科的待遇下降到了零点，后来娇娇在保育院因患重病被医生扔进了太平间，贺子珍为此与保育院院长大闹，保育院院长竟将贺子珍视为疯子关进了精神病院，并且一关就是6年。</p>
@@ -60,50 +60,46 @@
 <p><strong>结语</strong></p>
 <p>文革时被杀的四川大学生物系四年级女生冯元春，在“反右”鸣放时题目就是“毛泽东是伪马列主义者，共产党是最残酷的集团”，其所言皆为历史所证实。如今，马克思、恩格斯、列宁、斯大林、毛泽东的画皮正在被揭开，他们藉由共产主义思想毁灭人类的诸多罪恶也正在逐一被曝光。而了解了这些罪恶的中国人，唯一的选择就是彻底抛弃共产党，建设一个全新的国家。</p>
 <p>责任编辑：高义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/2/8/n8787054.md#1">周晓辉：共产党“五大导师”之毛泽东（三）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/2/7/n8783966.md#1">周晓辉：共产党“五大导师”之毛泽东（二）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/2/6/n8780394.md#1">周晓辉：共产党“五大导师”之毛泽东（一）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/27/n8750994.md#1">温良厚：毛泽东到底给底层人民带来了什么</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/14/n8704583.md#1">川人：为何伟大领袖毛泽东常常被国人唾弃？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/12/n8697753.md#1">毛泽东周恩来放弃日本巨额战争赔偿内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/13/n8699149.md#1">林辉：曾喊出“打倒毛泽东”口号的军队</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/12/n8697723.md#1">中共官方记载 毛泽东至少六次感谢日本侵华</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/12/13/n8586948.md#1">史求真：“毛泽东毕竟不是皇帝”吗？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/13/n8586948.md#1">史求真：“毛泽东毕竟不是皇帝”吗？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/12/n8697723.md#1">中共官方记载 毛泽东至少六次感谢日本侵华</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/12/n8697753.md#1">毛泽东周恩来放弃日本巨额战争赔偿内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/13/n8699149.md#1">林辉：曾喊出“打倒毛泽东”口号的军队</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/7/1/n11355991.md#1">【直击】七一游行前 港反送中示威者与警对峙</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/3/n11428903.md#1" target="_blank">林辉：周恩来冷酷无情 亲手给荣高棠扣叛徒帽子</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948100.md#1">【现场视频】富士康上千工人维权 遭警驱赶</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】武汉肺炎病毒被曝恐有夺命亚型</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/10/n8793965.htm">周晓辉：共产党“五大导师”之毛泽东（四）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/10/n8793965.htm">周晓辉：共产党“五大导师”之毛泽东（四）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/17/2/10/n8793965.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/2/10/n8793965.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
